Fix #128733: Cycles: Always check `host_pointer` before lazy allocation

In situations where video meomry has mapped data, `host_pointer` could
be nullptr after `generic_free`, however `device_vector<>::alloc` didn't
double check before returning the null pointer when size isn't changed.
Now always check `host_pointer` to guard nullptr situations.